<resources>
    <string name="app_name">Final_Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="inmueble">Inmueble</string>
    <string name="inquilino">Inquilino</string>
    <string name="contrato">Contrato</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>